src/pages/en/v1.16.0/deployment/upgrade.mdx
---
title: "Upgrade Deployment"
metaTitle: "Upgrade Deployment"
metaDescription: "How to upgrade your instance to the latest OpenReplay version."
---

Upgrading your OpenReplay deployment to the latest version requires updating both your backend (instance) and tracker.

## Upgrade Backend (Vanilla Installation)

1. Download the latest CLI

```bash
# Download the latest CLI
sudo wget https://raw.githubusercontent.com/openreplay/openreplay/main/scripts/helmcharts/openreplay-cli -O /bin/openreplay 
sudo chmod +x /bin/openreplay
export PATH=/var/lib/openreplay:$PATH
```

2. Check your Kubernetes cluster version, and upgrade it if it's older than `1.25` (**Mandatory**)

```bash
# Check Kubernetes version
kubectl version --short 2>/dev/null | grep -i server | awk '{print $NF}'
```

```bash
# Update Kubernetes
k3s-killall.sh
curl -sL https://get.k3s.io | sudo K3S_KUBECONFIG_MODE="644" INSTALL_K3S_VERSION='v1.25.6+k3s1' INSTALL_K3S_EXEC="--disable=traefik" sh -
	
# Restart Kubernetes cluster
sudo systemctl restart k3s.service

# Update Kubernetes deprecated apis
helm plugin install https://github.com/helm/helm-mapkubeapis
helm mapkubeapis -n app openreplay
```

3. Upgrade OpenReplay

```bash
RELEASE_UPGRADE=1 openreplay --upgrade
```
> Note: Your updated OpenReplay config file will be stored in `/var/lib/openreplay/vars.yaml`.

## Upgrade Backend (Docker only)

```bash
git clone https://github.com/openreplay/openreplay --depth 1
cd openreplay/scripts/docker-compose
bash upgrade.sh /path/to/old/common.env
eg: bash upgrade.sh ~/openreplay-docker-compose/common.env
```
> Note: Your updated OpenReplay config file will be stored in `common.env` along with the docker-compose file.

## Tracker Compatibility

Ensure your tracker (and tracker-assist plugin if you do use the Assist plugin) is compatible with the new backend version by checking the below compatibility table:

| Backend Version | Tracker Version | Assist Version |
|----------|-------------|-------------|
| 1.22.0 | 16.x.x | 11.x.x |
| 1.21.0 | 15.x.x | 10.x.x |
| 1.20.0 | 14.x.x | 10.x.x |
| 1.19.0 | 14.x.x | 9.x.x |
| 1.18.0 | 13.x.x | 9.x.x |
| 1.17.0 | 12.x.x | 8.x.x |
| 1.16.0 | 11.x.x | 7.x.x |
| 1.15.0 | 10.x.x | 6.x.x |
| 1.14.0 | 9.x.x | 6.x.x |
| 1.13.0 | 8.x.x | 6.x.x |
| 1.12.0 | 7.x.x | 5.x.x |
| 1.11.0 | 6.x.x | 5.x.x |
| 1.10.0 | 5.x.x | 5.x.x |
| 1.9.0 | 4.x.x | 4.x.x |
| 1.8.1 | 4.1.4 | 4.1.1 |
| 1.8.0 | 4.0.1 | 4.0.1 |
| 1.7.0 | 3.5.15 | 3.5.14 |
| 1.6.0 | 3.5.12 | 3.5.11 |
| 1.5.4 | 3.5.4 | 3.5.7 |
| 1.5.3 | 3.5.3 | 3.5.5 |
| 1.5.2 | 3.5.2 | 3.5.4 |
| 1.5.1 | 3.5.1 | 3.5.3 |
| 1.5.0 | 3.5.0 | 3.5.0 |
| 1.4.0 | 3.4.17 | 3.4.16 |
| 1.3.6 | 3.4.16 | 3.4.15 |
| 1.3.5 | 3.4.0 | 3.4.13 |
| 1.3.0 | 3.2.1 | 3.4.12 |
| 1.2.0 | 3.1.0 | N/A |
| 1.1.0 | 3.0.3 | N/A |

## Have questions?

If you encounter any issue during the upgrade process, reach out on [Slack](https://slack.openreplay.com) or check out our [Forum](https://forum.openreplay.com) and get help from our community.
